cmake_minimum_required(VERSION 2.8)
project(Vision)
set(CMAKE_CXX_STANDARD 17)
set(OpenCV_DIR /usr/share/OpenCV)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(Vision main.cpp util.cpp vision.cpp)
target_link_libraries(Vision mosquitto ${OpenCV_LIBS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fpermissive")
